# swcf

./: .gitignore  Cargo.toml  README.md  bugsearch.md  config.dist.yml  decrypt_payload.html
data/: getinput.sh  init_keys.json  input.js  input.js_out.js  traces.txt  vm_config.json
examples/: input_out.js  traces.js
src/: extract_required.rs  lib.rs  logger.rs  mod.rs  requests.rs
src/extractors/: config_builder.rs  extract_required.rs  extractor.rs  magic_bits_ast.rs  magic_bits_regex.rs  mod.rs
src/network/: mod.rs  requests.rs  tls_api.rs
src/transformers/: control_flow_flattening.rs  mod.rs  simplify_binary.rs
src/traversals/: config_builder.rs  deobfuscate_script.rs  extractor.rs  mod.rs  utils.rs
src/traversals/transformations/: constant_evaluation.rs  control_flow_flattening.rs  proxy_functions.rs  strings.rs  useless_if.rs
src/utils/: deobfuscate_script.rs  logger.rs  mod.rs  utils.rs
src/vm/: mod.rs  opcodes.rs  vm.rs
